--- a/scripts/settings.targets
+++ b/scripts/settings.targets
@@ -9,7 +9,7 @@
          Sets the AssemblyVersion, AssemblyFileVersion and AssemblyInformationalVersion -->
     <Version Condition="'$(Version)' == ''">$(SourcePrefix)-dev</Version>
     <PackageVersion Condition="'$(PackageVersion)' == ''">$(SourcePrefix)-dev</PackageVersion>
-    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
