--- a/src/Noted/Noted.csproj
+++ b/src/Noted/Noted.csproj
@@ -11,14 +11,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ephemerality.Unpack" Version="$(EphemeralityUnpackVersion)" />
-    <PackageReference Include="HtmlAgilityPack" Version="$(HtmlAgilityPackVersion)" />
-    <PackageReference Include="JTForks.MiscUtil" Version="$(JTForksMiscUtilVersion)" />
-    <PackageReference Include="Markdig" Version="$(MarkdigVersion)" />
-    <PackageReference Include="Roler.Toolkit.File.Mobi" Version="$(MobiToolkitVersion)" />
-    <PackageReference Include="PdfPig" Version="$(PdfPigVersion)" />
-    <PackageReference Include="System.CommandLine" Version="$(SystemCommandLineVersion)" />
-    <PackageReference Include="VersOne.Epub" Version="$(VersoneEpubVersion)" />
+    <!-- Use Crayon or Pastel for console output -->
+    <PackageReference Include="Ephemerality.Unpack" Version="0.0.2" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.30" />
+    <PackageReference Include="JTForks.MiscUtil" Version="1.285.0" />
+    <PackageReference Include="Markdig" Version="0.23.0" />
+    <PackageReference Include="PdfPig" Version="0.1.4" />
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20574.7" />
+    <PackageReference Include="VersOne.Epub" Version="3.0.3.1" />
   </ItemGroup>
 
 </Project>
