--- a/src/Noted/Noted.csproj
+++ b/src/Noted/Noted.csproj
@@ -12,12 +12,14 @@
 
   <ItemGroup>
     <!-- Use Crayon or Pastel for console output -->
+    <PackageReference Include="AngleSharp" Version="0.14.0" />
     <PackageReference Include="Ephemerality.Unpack" Version="0.0.2" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.30" />
     <PackageReference Include="JTForks.MiscUtil" Version="1.285.0" />
     <PackageReference Include="Markdig" Version="0.23.0" />
     <PackageReference Include="PdfPig" Version="0.1.4" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20574.7" />
+    <PackageReference Include="System.Linq.Async" Version="5.0.0" />
     <PackageReference Include="VersOne.Epub" Version="3.0.3.1" />
   </ItemGroup>
 
