--- a/test/Noted.Tests/Noted.Tests.csproj
+++ b/test/Noted.Tests/Noted.Tests.csproj
@@ -15,12 +15,14 @@
 
   <ItemGroup>
     <PackageReference Include="PdfPig" Version="0.1.4" />
+    <PackageReference Include="Ephemerality.Unpack" Version="0.0.2" />
 
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
     <PackageReference Include="Moq" Version="4.16.1" />
+    <PackageReference Include="System.Linq.Async" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
