fix: compile time null checks and logger infra.

--- a/src/Noted/Noted.csproj
+++ b/src/Noted/Noted.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <SourceRoot Condition="$(SourceRoot) == ''">..\..\</SourceRoot>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <Import Project="$(SourceRoot)scripts/settings.targets" />
 
