--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,11 +55,11 @@ jobs:
           dotnet publish src/Noted -c Release --self-contained false -r linux-x64 -o ./src/Noted/bin/Portable.linux-x64
           dotnet publish src/Noted -c Release --self-contained -r win-x64 -o ./src/Noted/bin/win-x64
           dotnet publish src/Noted -c Release --self-contained -r linux-x64 -o ./src/Noted/bin/linux-x64
-          zip -r src/Noted/bin/Noted.${{ steps.extract_version.outputs.version }}.Portable.win-x64 ./src/Noted/bin/Portable.win-x64
-          zip -r src/Noted/bin/Noted.${{ steps.extract_version.outputs.version }}.Portable.linux-x64 ./src/Noted/bin/Portable.linux-x64
-          zip -r src/Noted/bin/Noted.${{ steps.extract_version.outputs.version }}.win-x64 ./src/Noted/bin/win-x64
-          zip -r src/Noted/bin/Noted.${{ steps.extract_version.outputs.version }}.linux-x64 ./src/Noted/bin/linux-x64
-          ls src/Noted/bin/*.zip
+          7z a src/Noted/bin/Noted.${{ steps.extract_version.outputs.version }}.Portable.win-x64.zip ./src/Noted/bin/Portable.win-x64 -r
+          7z a src/Noted/bin/Noted.${{ steps.extract_version.outputs.version }}.Portable.linux-x64.zip ./src/Noted/bin/Portable.linux-x64 -r
+          7z a src/Noted/bin/Noted.${{ steps.extract_version.outputs.version }}.win-x64.zip ./src/Noted/bin/win-x64 -r
+          7z a src/Noted/bin/Noted.${{ steps.extract_version.outputs.version }}.linux-x64.zip ./src/Noted/bin/linux-x64 -r
+          ls -l src/Noted/bin
       - name: Create Release
         uses: ncipollo/release-action@v1.8.4
         with:
