--- a/scripts/settings.targets
+++ b/scripts/settings.targets
@@ -2,13 +2,13 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <SourceRoot Condition="$(SourceRoot) == ''">$(MSBuildThisFileDirectory)../../</SourceRoot>
-    <SourcePrefix>1.0.0</SourcePrefix>
+    <SourcePrefix>1.0.1</SourcePrefix>
   </PropertyGroup>
   <PropertyGroup>
     <!-- Versioning is defined from the build script. Use a default dev build if it's not defined.
          Sets the AssemblyVersion, AssemblyFileVersion and AssemblyInformationalVersion -->
-    <Version Condition="'$(Version)' == ''">$(SourcePrefix)-dev</Version>
-    <PackageVersion Condition="'$(PackageVersion)' == ''">$(SourcePrefix)-dev</PackageVersion>
+    <Version Condition="'$(Version)' == ''">$(SourcePrefix)</Version>
+    <PackageVersion Condition="'$(PackageVersion)' == ''">$(SourcePrefix)</PackageVersion>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
