--- a/src/Noted/Noted.csproj
+++ b/src/Noted/Noted.csproj
@@ -12,16 +12,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AngleSharp" Version="0.14.0" />
-    <PackageReference Include="AngleSharp.XPath" Version="1.1.7" />
+    <PackageReference Include="AngleSharp" Version="1.0.7" />
+    <PackageReference Include="AngleSharp.XPath" Version="2.0.3" />
     <PackageReference Include="Ephemerality.Unpack" Version="0.0.5" />
     <PackageReference Include="JTForks.MiscUtil" Version="1.285.0" />
-    <PackageReference Include="Markdig" Version="0.31.0" />
-    <PackageReference Include="PdfPig" Version="0.1.5" />
-    <PackageReference Include="Spectre.Console" Version="0.47.0" />
-    <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20574.7" />
+    <PackageReference Include="Markdig" Version="0.34.0" />
+    <PackageReference Include="PdfPig" Version="0.1.8" />
+    <PackageReference Include="Spectre.Console" Version="0.48.0" />
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+    <PackageReference Include="System.CommandLine.NamingConventionBinder" Version="2.0.0-beta4.22272.1" />
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
-    <PackageReference Include="VersOne.Epub" Version="3.2.0" />
+    <PackageReference Include="VersOne.Epub" Version="3.3.1" />
 
     <!-- Workaround for publish because of JTForks.MiscUtil -->
     <PackageReference Include="Microsoft.Win32.Primitives" Version="4.3.0" />
