chore: migrate build to Directory props and targets.

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -1,7 +1,13 @@
 <Project>
+  <ItemGroup>
+    <PackageReference Include="Stylecop.Analyzers" Condition="$(StylecopEnabled) == '' or $(StylecopEnabled) != 'false'">
+      <Version>1.2.0-beta.507</Version>
+    </PackageReference>
+  </ItemGroup>
   <Target Name="husky" BeforeTargets="Restore;CollectPackageReferences" Condition="'$(HUSKY)' != 0">
     <Exec Command="dotnet tool restore"  StandardOutputImportance="Low" StandardErrorImportance="High"/>
     <Exec Command="dotnet husky install" StandardOutputImportance="Low" StandardErrorImportance="High"
       WorkingDirectory="../../" />  <!--Update this to the relative path to your project root dir -->
   </Target>
 </Project>
+<!-- vim: set ft=xml : -->
