feat: koreader library support.

--- a/test/Noted.Tests/Noted.Tests.csproj
+++ b/test/Noted.Tests/Noted.Tests.csproj
@@ -32,7 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="../assets/*.*">
+    <Content Include="../assets/**/*.*">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
