--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,8 +40,12 @@ jobs:
         with:
           name: Noted.${{ matrix.os }}
           path: src/Noted/bin/Publish/
-      - name: Release please
-        uses: googleapis/release-please-action@v4
+
+  version:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: googleapis/release-please-action@v4
         id: release
         if: github.ref == 'refs/heads/master'
         with:
@@ -50,7 +54,7 @@ jobs:
 
   publish:
     if: contains(github.ref, 'tags/v') # only publish tagged versions
-    needs: [test]
+    needs: [test, version]
     runs-on: ubuntu-latest
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: 1
