--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
   publish:
     needs: [test, version]
     runs-on: ubuntu-22.04
-    if: needs.version.outputs.release_created # only publish tagged versions
+    if: ${{ needs.version.outputs.release_created }} # only publish tagged versions
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: 1
       DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
